--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
   "extends": "astro/tsconfigs/strict",
   "compilerOptions": {
     "jsx": "preserve",
-    "types": ["./src/types"]
+    "types": ["./src/types"],
+    "noUnusedLocals": false
   }
 }
