--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,6 @@
   "extends": "astro/tsconfigs/strict",
   "compilerOptions": {
     "jsx": "preserve",
-    "types": ["./src/types"],
-    "noUnusedLocals": false
+    "types": ["./src/types"]
   }
 }
